<resources>
    <string name="app_name">lab1</string>
    <string name="a_platform_for_chatting_without_restrictions">A platform for chatting without restrictions</string>
    <string name="may_the_force_be_with_you">May the force be with you</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_logo">Navigate to settings</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="enter_email">Enter new email</string>
    <string name="font_size">Font Size</string>
    <string name="settings">Settings</string>
    <string name="navigate_to_home">Navigate to home</string>
    <string name="Email">Email</string>
    <string name="current_email">Current email:</string>
    <string name="logout">Logout</string>
    <string name="save_to_file">Save to file</string>
    <string name="delete_file">Delete file</string>
    <string name="restore_file">Restore file</string>
    <string name="file_status_will_appear_here">File status will appear here</string>
    <string name="delete">Delete</string>

</resources>
