<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgr"
    tools:context=".presentation.screens.SettingsFragment">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/black"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/navigate_to_home"
            android:layout_marginStart="8dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp" />

    <TextView
        android:id="@+id/oldEmailText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:padding="8dp"
        android:text="@string/current_email"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/oldEmail"
        android:layout_margin="16dp" />

    <TextView
        android:id="@+id/oldEmail"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="84dp"
        android:hint="@string/Email"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/oldEmailText"
        app:layout_constraintTop_toBottomOf="@id/heading" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:padding="8dp"
        android:hint="@string/enter_email"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/oldEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/fontSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_size"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_marginTop="32dp"/>

    <SeekBar
        android:id="@+id/seekBarFontSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fontSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <Button
        android:id="@+id/btnSaveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/seekBarFontSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="140dp"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/seekBarFontSize"
        app:layout_constraintStart_toEndOf="@id/btnSaveSettings"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_marginTop="40dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchChangeColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change theme"
        app:layout_constraintTop_toBottomOf="@id/btnLogout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/tvFileStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_status_will_appear_here"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/switchChangeColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnDeleteFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_file"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvFileStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnRestoreFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restore_file"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btnDeleteFile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
