<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/planet"
    tools:context=".presentation.screens.HomeFragment">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/black"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/usernameHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:padding="14dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/btnSettings"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:contentDescription="@string/settings_logo"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_launcher"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSaveToFile"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/save_to_file"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="end"
        android:padding="10dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="14dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
